GNOME Bugzilla – Bug 763045
glmemoryallocator: Buffer size miss-match when mapping GLMemory without PBO
Last modified: 2016-03-11 15:56:20 UTC
I'm running on an old Nvidia card without PBO support. In that case, there is something wrong with the video alignment, and mapping the memory from avviddec fails. "subclass map fail" Digging further, it seems to fail a size check (size > mem->maxsize) in the CPU access routine. That is likely a bug in the video alignment handling, as the delta is bring size to a multiple of 32. This is a regression from 1.6 I believe.
Created attachment 323044 [details] [review] glbasememory: Don't change maxsize at run-time Maxsize is initialized once and should never change. Allocating data should have no impact on the selected max size for this memory. This causing memory map failure as the maxsize would become smaller then size. This happened when using direct rendering in avviddec on GL that does not support PBO transfer.
Attachment 323044 [details] pushed as 140815f - glbasememory: Don't change maxsize at run-time
Thanks for the review !
*** Bug 758852 has been marked as a duplicate of this bug. ***